--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,28 @@ ul {
  align-content: center;
  gap: 2rem;
  min-height: 8vh;
- 
+
+ /* Sticky nav
+ height: 9.6rem;
+ padding: 0 4.8rem; */
+ /* position: relative; */
+}
+
+/* Sticky Navigation */
+.sticky header {
+  /* position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 6rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03); */
+}
+.sticky #hero-section{
+  /* margin-top: 9.6rem; */
 }
 li{
   list-style: none;
