--- a/style/style.css
+++ b/style/style.css
@@ -323,6 +323,40 @@ li{
   padding: 9rem 0;
   background: #F1F1F1;
 }
+/* Modal */
+.modal{
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: -25%;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+ 
+}
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+.img-popup{
+  width: 50%;
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 #reservation .row{
   box-shadow: 0 2.4rem 4.8rem rgba(0,0,0,0.15);
   border-radius: 11px;
